finito-copy-pagina-regole

--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -251,42 +251,54 @@
                 </h3>
                 <ul>
                   <li>
-                    1. <span class="font-bold">Palla Fuori:</span> Se il giocatore sta dribblando o ha il
-                    controllo del pallone e tocca con il piede le linee che
-                    delimitano il campo, la palla viene considerata fuori gioco.
-                    La squadra avversaria riprende con una rimessa.
+                    1. <span class="font-bold">Palla Fuori:</span> Se il
+                    giocatore sta dribblando o ha il controllo del pallone e
+                    tocca con il piede le linee che delimitano il campo, la
+                    palla viene considerata fuori gioco. La squadra avversaria
+                    riprende con una rimessa.
                   </li>
                   <li>
-                    2. Dopo il secondo quarto c'è una pausa lunga, chiamata
-                    anche primo tempo, che dura 15 minuti.
+                    2. <span class="font-bold">Passi: </span>Quando un giocatore
+                    ferma la palla, può fare al massimo altri due passi. Il
+                    primo passo zero è quando raccoglie la palla. L'NBA è
+                    abbastanza permissiva su questo. Un caso più comune di
+                    questo tipo d’infrazione si verifica quando un giocatore,
+                    fermando il pallone e tenendolo in mano, usa la tecnica
+                    consentita di tenere un piede fermo a terra, detto piede
+                    perno,ma nel farlo inavvertitamente lo muove sollevandolo da
+                    terra, commettendo così l’infrazione.
                   </li>
                   <li>
-                    3. Quando una squadra ha la palla, ha un massimo di 24
-                    secondi per compiere un possesso offensivo (questo si chiama
-                    shot clock).
+                    3.
+                    <span class="font-bold"
+                      >Violazione del Tempo di Gioco (Shot Clock
+                      Violation):</span
+                    >
+                    Se la squadra con il controllo del pallone non tira entro 24
+                    secondi o tira sullo scadere senza toccare il ferro, la
+                    palla passa agli avversari.
                   </li>
                   <li>
-                    4. Le sostituzioni possono essere fatte durante le pause di
-                    gioco, non mentre il gioco è in corso, e non c'è un limite
-                    al numero di sostituzioni.
+                    4. <span class="font-bold">Sfondamento: </span>Questo
+                    avviene quando un giocatore attaccante sbatte contro un
+                    difensore che sta fermo nella sua posizione. Di solito, il
+                    difensore deve essere in una buona posizione e l'attaccante
+                    deve abbassarsi e colpire il difensore con la spalla.
                   </li>
                   <li>
-                    5. Ogni squadra può chiamare 7 timeout, o pause, che durano
-                    75 secondi ciascuna.
-                  </li>
-                  <li>
-                    6. Il tempo di gioco effettivo si ferma quando la palla non
-                    è in gioco, quindi la partita, che è di 48 minuti in totale
-                    (la somma dei 4 quarti), può durare più di 2 ore a causa di
-                    queste interruzioni.
+                    5. <span class="font-bold">Espulsione:</span> Se un
+                    giocatore commette 6 falli, non può più giocare nella
+                    partita. Viene espulso anche se commette un "Flagrant Foul"
+                    di tipo 2, che è un contatto inutile ed eccessivo, oppure
+                    due “Flagrant Foul” di tipo 1, che è un fall tecnico e che
+                    comprende anche i falli per motivi disciplinari o di
+                    comportamento.
                   </li>
                 </ul>
                 <p class="mt-4 text-base">
-                  In breve, la partita si divide in quarti di 12 minuti, ci sono
-                  pause lunghe e brevi, e il cronometro si ferma quando la palla
-                  non è in gioco, rendendo la durata totale della partita più
-                  lunga di quanto indicato dai soli 48 minuti di gioco
-                  effettivo.
+                  In breve, queste sono alcune delle situazioni che possono
+                  accadere durante una partita di basket quando si parla di
+                  infrazioni e falli.
                 </p>
               </div>
             </div>
@@ -296,52 +308,38 @@
               class="block rounded-xl border-[1px] border-blue-600 mt-10 bg-white text-justify w-[45%] h-full"
             >
               <div
-                class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary"
+                class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary text-center"
               >
-                Durata partita
+                La classifica
               </div>
               <div class="p-6">
                 <h3 class="mb-2 text-xl font-medium leading-tight">
-                  La prima cosa importante è capire come funziona il cronometro
-                  durante una partita e quanto durano i vari periodi di gioco.
+                  È importante sapere che in tutte le leghe americane ci sono
+                  divisioni chiamate Conference.
                 </h3>
-                <ul>
-                  Ecco perché:
-                  <li>
-                    1. Ci sono 4 periodi di gioco, chiamati anche quarti, e
-                    ognuno dura 12 minuti.
-                  </li>
-                  <li>
-                    2. Dopo il secondo quarto c'è una pausa lunga, chiamata
-                    anche primo tempo, che dura 15 minuti.
-                  </li>
-                  <li>
-                    3. Quando una squadra ha la palla, ha un massimo di 24
-                    secondi per compiere un possesso offensivo (questo si chiama
-                    shot clock).
-                  </li>
-                  <li>
-                    4. Le sostituzioni possono essere fatte durante le pause di
-                    gioco, non mentre il gioco è in corso, e non c'è un limite
-                    al numero di sostituzioni.
-                  </li>
-                  <li>
-                    5. Ogni squadra può chiamare 7 timeout, o pause, che durano
-                    75 secondi ciascuna.
-                  </li>
-                  <li>
-                    6. Il tempo di gioco effettivo si ferma quando la palla non
-                    è in gioco, quindi la partita, che è di 48 minuti in totale
-                    (la somma dei 4 quarti), può durare più di 2 ore a causa di
-                    queste interruzioni.
-                  </li>
-                </ul>
-                <p class="mt-4 text-base">
-                  In breve, la partita si divide in quarti di 12 minuti, ci sono
-                  pause lunghe e brevi, e il cronometro si ferma quando la palla
-                  non è in gioco, rendendo la durata totale della partita più
-                  lunga di quanto indicato dai soli 48 minuti di gioco
-                  effettivo.
+                <p class="mb-4 text-base">
+                  Nella NBA, ad esempio, ci sono le Conference East e West.
+                </p>
+                <p class="mb-4 text-base">
+                  Allo stesso modo, in NFL ci sono l'AFC (American Football
+                  Conference) e la NFC (National Football Conference), mentre in
+                  MLB ci sono l'AL (American League) e l'NL (National League).
+                </p>
+                <p class="mb-4 text-base">
+                  Ogni Conference si suddivide ulteriormente in Division.
+                </p>
+                <p class="mb-4 text-base">
+                  Nella NBA, ci sono 3 division, ognuna con 5 squadre. In
+                  totale, ci sono 15 squadre ad Est e 15 squadre ad Ovest, per
+                  un totale di 30 squadre.
+                </p>
+                <p class="mb-4 text-base">
+                  La classifica viene determinata dalla percentuale di vittorie
+                  di ogni squadra. Quindi, accanto al nome di ogni squadra,
+                  troverete sempre due numeri che indicano le partite vinte e
+                  perse durante la stagione, accompagnati dalla percentualedi
+                  vittorie raggiunte, in caso di parità tra due o più squadre
+                  influiscono gli scontri diretti tra quelle squadre.
                 </p>
               </div>
             </div>
@@ -349,56 +347,46 @@
               class="block rounded-xl border-[1px] border-blue-600 mt-10 bg-white text-justify w-[45%] h-full"
             >
               <div
-                class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary"
+                class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary text-center"
               >
-                Regole di Base dell'NBA
+                La stagione
               </div>
               <div class="p-6">
                 <h3 class="mb-2 text-xl font-medium leading-tight">
-                  Il basket è uno sport molto diffuso in tutto il mondo, e forse
-                  avete già visto partite della nazionale italiana ai mondiali o
-                  alle olimpiadi.
+                  Ogni squadra gioca 82 partite durante la Regular Season.
                 </h3>
                 <p class="mb-4 text-base">
-                  A differenza di altri sport americani come il football
-                  americano, il baseball e l'hockey, il basket è molto popolare
-                  in Italia. Potrebbe essere che non abbiate mai visto una
-                  partita di football americano, baseball o hockey sul ghiaccio.
+                  Le prime 6 squadre di ogni Conference vanno direttamente ai
+                  Playoff.
                 </p>
                 <p class="mb-4 text-base">
-                  Se non siete grandi appassionati di sport, ma volete vivere
-                  l'atmosfera unica delle partite negli Stati Uniti, l'NBA
-                  potrebbe essere la scelta migliore.
+                  Le squadre dalla 7ª alla 10ª posizione per ogni conference
+                  partecipano a un torneo chiamato Play-in Tournament per
+                  decidere le ultime due squadre che entreranno nei Playoff.
                 </p>
                 <ul>
-                  Ecco perché:
+                  In ogni Conference, si svolgono tre partite durante il Play-in
+                  Tournament:
                   <li>
-                    1. Gli stadi di NBA sono spesso situati nelle zone più
-                    turistiche delle città, quindi sono facili da raggiungere.
-                    Questo è simile anche per l'hockey, dato che molte arene
-                    ospitano sia partite di basket che di hockey, talvolta nello
-                    stesso giorno. Al contrario, gli stadi di MLB e NFL sono
-                    spesso fuori città, richiedendo spostamenti più lunghi sia
-                    in auto che con i mezzi pubblici.
+                    1. <span class="font-bold">Primo Round:</span> La settima e
+                    l'ottava squadra si sfidano, e chi vince ottiene il settimo
+                    posto nei Playoff.
                   </li>
                   <li>
-                    2. Nonostante ci siano timeout, la partita di basket scorre
-                    veloce, anche se ci sono pause. Questo è diverso nel
-                    baseball e nel football, dove le pause possono essere più
-                    lunghe e noiose.
+                    2. <span class="font-bold">Secondo Round:</span> La nona e
+                    la decima squadra si sfidano, e chi perde viene eliminato.
+                    Chi vince ha ancora una possibilità di andare ai Playoff.
                   </li>
                   <li>
-                    3. Le regole del basket sono più facili da capire rispetto
-                    ad altri sport, e anche se non ne conoscete nessuna, potete
-                    comunque seguire la partita. Al contrario, il football
-                    americano e il baseball possono essere più complicati da
-                    capire, mentre l'hockey è una via di mezzo.
+                    3.<span class="font-bold">Terzo Round:</span>La squadra che
+                    perde nella sfida 1 e quella che vince nella sfida 2 giocano
+                    per ottenere l'ultimo ottavo posto nei Playoff.
                   </li>
                 </ul>
-                <p class="mb-4 text-base">
-                  In breve, se volete avvicinarvi al clima delle partite negli
-                  Stati Uniti e preferite uno sport più facile da seguire, l'NBA
-                  potrebbe essere la scelta giusta per voi.
+                <p class="mt-4 text-base">
+                  In breve, queste sono alcune delle situazioni che possono
+                  accadere durante una partita di basket quando si parla di
+                  infrazioni e falli.
                 </p>
               </div>
             </div>
@@ -418,22 +406,21 @@
             class="block rounded-xl border-[1px] border-blue-600 mt-10 bg-white text-justify w-full h-full"
           >
             <div
-              class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary"
+              class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary text-center"
             >
               I Play Off
             </div>
             <div class="flex flex-nowrap justify-between items-center">
               <div class="p-6 w-[45%]">
                 <p class="mb-4 text-base">
-                  A differenza di altri sport americani come il football
-                  americano, il baseball e l'hockey, il basket è molto popolare
-                  in Italia. Potrebbe essere che non abbiate mai visto una
-                  partita di football americano, baseball o hockey sul ghiaccio.
+                  Le 8 squadre che si sfideranno per il titolo giocheranno nei
+                  playoff, seguendo un tabellone tradizionale in cui la prima
+                  della regular season affronta l'ultima e così via.
                 </p>
                 <p class="mb-4 text-base">
-                  In breve, se volete avvicinarvi al clima delle partite negli
-                  Stati Uniti e preferite uno sport più facile da seguire, l'NBA
-                  potrebbe essere la scelta giusta per voi.
+                  Ogni serie di partite si svolge al meglio delle 7 partite,
+                  quindi per passare ai turni successivi dei playoff, una
+                  squadra deve vincere 4 partite.
                 </p>
               </div>
               <div class="w-[50%]">
@@ -449,30 +436,66 @@
             class="block rounded-xl border-[1px] border-blue-600 mt-10 bg-white text-justify w-full h-full"
           >
             <div
-              class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary"
+              class="border-b-2 rounded-t-xl font-bold text-lg px-6 py-3 bg-secondary text-center"
             >
               Cosa Vincono i Compioni
             </div>
             <div class="flex flex-row-reverse flex-nowrap items-center">
               <div class="p-6 w-[45%] justify-start">
                 <p class="mb-4 text-base">
-                  A differenza di altri sport americani come il football
-                  americano, il baseball e l'hockey, il basket è molto popolare
-                  in Italia. Potrebbe essere che non abbiate mai visto una
-                  partita di football americano, baseball o hockey sul ghiaccio.
+                  <span class="font-bold"
+                    >Cosa vincono i campioni delle Finals?</span
+                  >
+                  I vincitori delle Finals ottengono il trofeo Larry O'Brien, ma
+                  ciò che attira più attenzione è l'anello consegnato ai
+                  giocatori nella stagione successiva.
                 </p>
                 <p class="mb-4 text-base">
-                  In breve, se volete avvicinarvi al clima delle partite negli
-                  Stati Uniti e preferite uno sport più facile da seguire, l'NBA
-                  potrebbe essere la scelta giusta per voi.
+                  <span class="font-bold"
+                    >Quanto vale l'anello di campioni NBA?</span
+                  >
+                  Non esiste un prezzo fisso poiché ogni squadra decide come
+                  realizzarlo. Tuttavia, la quantità di diamanti su ogni
+                  "championship ring" fa aumentare il suo valore con ogni titolo
+                  vinto.
+                </p>
+                <p class="mb-4 text-base">
+                  Per esempio, i Lakers hanno incaricato Jason of Beverly Hills,
+                  un negozio di gioielli di lusso, di creare l'anello per il
+                  titolo del 2020.
+                </p>
+                <p class="mb-4 text-base">
+                  Questo negozio ha già realizzato anelli per i Golden State
+                  Warriors, i Lakers nel 2009 e 2010, i Dodgers (MLB) nel 2018 e
+                  ha celebrato i successi di Chelsea e Atletico Madrid.
+                </p>
+                <p class="mb-4 text-base">
+                  L'anello dei Lakers del 2019 ha 804 pietre, tra cui 15,5
+                  carati di diamanti bianchi e gialli, oltre a 0,95 carati di
+                  pietre di ametista viola Lakers. È il più pesante mai
+                  registrato per un anello di NBA. Le 17 pietre di ametista
+                  viola rappresentano i 17 titoli vinti dai Lakers, e il numero
+                  del giocatore inciso sull'anello ha uno sfondo a forma di
+                  serpente, in omaggio a Kobe Bryant.
+                </p>
+                <p class="mb-10 text-base">
+                  <span class="font-bold text-xl">Curiosità:</span> L'ideatore degli anelli, Jason Arasheben, ha
+                  dichiarato che gli anelli dei Lakers sono i più costosi della
+                  storia della NBA, superando il valore di quelli dei Raptors
+                  nel 2019, che detenevano il record con oltre 100.000 dollari,
+                  anche se è difficile quantificare un valore preciso.
                 </p>
               </div>
-              <div class="w-[50%] flex justify-center">
-                <img
+              <div class="w-[50%]">
+                <figure>
+                  <figcaption class="font-bold text-2xl">Anello dei Lakers 2020</figcaption>
+                  <img
                   class="object-cover w-full h-full rounded-xl"
                   src="https://www.corriere.it/methode_image/2021/01/22/Sport/Foto%20Sport%20-%20Trattate/anello1-kYB-U32408487884ptD-656x492@Corriere-Web-Sezioni.JPG"
                   alt=""
                 />
+                </figure>
+                
               </div>
             </div>
           </div>
