--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -7,5 +7,121 @@
             </h2>
         </div>
         <div class="w-full h-6 bg-secondary"></div>
+        <div class="flex flex-nowrap justify-center">
+            <div class="w-[10%]">
+                <div class="border rounded-lg px-1" style="padding-top: 2px;">
+                    <button class="h-12 w-12 leading-none rounded-lg transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 items-center" :class="{'cursor-not-allowed opacity-25': month == 0 }" (click)="decrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                        -
+                    </button>
+                </div>
+            </div>
+            <div class="w-[90%]">
+                <div class="flex flex-nowrap w-auto h-full">
+                    <div class="w-1/3 h-full hidden lg:block">
+                        <div class="container mx-auto px-4 py-2 h-full">
+                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
+                                <div class="flex items-center justify-between py-2 px-6">
+                                    <div>
+                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthLeft]}}</span>
+                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearLeft}}</span>
+                                    </div>
+                                </div>
+                                <div class="p-4">
+                                    <div class="flex flex-wrap w-full">
+                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                            <div class="px-2 py-2">
+                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="w-full flex flex-wrap border-t border-l">
+                                        <div *ngFor="let blankday of blankdays_left, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                            <div *ngIf="blankdays_left.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                            <div *ngIf="blankdays_left.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                                        </div>
+                                        <div *ngFor="let date of no_of_days_left" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                            <div class="py-2 relative">
+                                                <div class="flex items-center justify-center cursor-pointer text-center" :class="{'bg-blue-500 text-white': isToday(date) == true, 'text-gray-700 hover:bg-blue-200': isToday(date) == false }"><p class="w-full text-center">{{date}}</p></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lg:w-1/3 h-full w-full">
+                        <div class="container mx-auto px-4 py-2 h-full">
+                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
+                                <div class="flex items-center justify-between py-2 px-6">
+                                    <div>
+                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthCentral]}}</span>
+                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearCentral}}</span>
+                                    </div>
+                                </div>
+                                <div class="p-4">
+                                    <div class="flex flex-wrap w-full">
+                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                            <div class="px-2 py-2">
+                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="w-full flex flex-wrap border-t border-l">
+                                        <div *ngFor="let blankday of blankdays_central, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                            <div *ngIf="blankdays_central.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                            <div *ngIf="blankdays_central.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                                        </div>
+                                        <div *ngFor="let date of no_of_days_central" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                            <div class="py-2 relative">
+                                                <div class="flex items-center justify-center cursor-pointer text-center" :class="{'bg-blue-500 text-white': isToday(date) == true, 'text-gray-700 hover:bg-blue-200': isToday(date) == false }"><p class="w-full text-center">{{date}}</p></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-1/3 h-full hidden lg:block">
+                        <div class="container mx-auto px-4 py-2 h-full">
+                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
+                                <div class="flex items-center justify-between py-2 px-6">
+                                    <div>
+                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthRigth]}}</span>
+                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearRigth}}</span>
+                                    </div>
+                                </div>
+                                <div class="p-4">
+                                    <div class="flex flex-wrap w-full">
+                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                            <div class="px-2 py-2">
+                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="w-full flex flex-wrap border-t border-l">
+                                        <div *ngFor="let blankday of blankdays_rigth, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                            <div *ngIf="blankdays_rigth.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                            <div *ngIf="blankdays_rigth.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                                        </div>
+                                        <div *ngFor="let date of no_of_days_rigth" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                            <div class="py-2 relative">
+                                                <div class="flex items-center justify-center cursor-pointer text-center" :class="{'bg-blue-500 text-white': isToday(date) == true, 'text-gray-700 hover:bg-blue-200': isToday(date) == false }"><p class="w-full text-center">{{date}}</p></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[10%]">
+                <div class="border rounded-lg px-1" style="padding-top: 2px;">
+                    <button class="leading-none rounded-lg transition ease-in-out duration-100 inline-flex items-center cursor-pointer hover:bg-gray-200 p-1" :class="{'cursor-not-allowed opacity-25': month == 11 }" (click)="incrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                        +
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
