--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -7,128 +7,134 @@
             </h2>
         </div>
         <div class="w-full h-6 bg-secondary"></div>
-        <div class="flex flex-nowrap justify-center">
-            <div class="w-[10%]">
-                <div class="border rounded-lg px-1" style="padding-top: 2px;">
-                    <button class="h-12 w-12 leading-none rounded-lg transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 items-center" :class="{'cursor-not-allowed opacity-25': month == 0 }" (click)="decrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
-                        -
-                    </button>
-                </div>
-            </div>
-            <div class="w-[90%]">
-                <div class="flex flex-nowrap w-auto h-full">
-                    <div class="w-1/3 h-full hidden lg:block">
-                        <div class="container mx-auto px-4 py-2 h-full">
-                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
-                                <div class="flex items-center justify-between py-2 px-6">
-                                    <div>
-                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthLeft]}}</span>
-                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearLeft}}</span>
-                                    </div>
-                                </div>
-                                <div class="p-4">
-                                    <div class="flex flex-wrap w-full">
-                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
-                                            <div class="px-2 py-2">
-                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="w-full flex flex-wrap border-t border-l">
-                                        <div *ngFor="let blankday of blankdays_left, let last=last" class="border-b w-[14.28%]" id="blankday">
-                                            <div *ngIf="blankdays_left.length!=blankday" class="text-center h-full px-4 pt-2"></div>
-                                            <div *ngIf="blankdays_left.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
-                                        </div>
-                                        <div *ngFor="let date of no_of_days_left" class="border-r border-b w-[14.28%]" id="no_of_days">
-                                            <div class="py-2 hover:cursor-pointer" [ngClass]="{
-                                                    'bg-black text-white': controlForIsToday(currentYearLeft, currentMonthLeft, date) }">
-                                                <div (click)="daySelected=date; isToday(currentYearLeft, currentMonthLeft, daySelected)" class="flex items-center justify-center cursor-pointer text-center">
-                                                    <p class="w-full text-center">{{date}}</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+    </div>
+    <div class="flex justify-center">
+        <div class="container flex justify-center w-full">
+            <div class="lg:w-[90%] w-full h-full flex flex-nowrap bg-white rounded-lg shadow">
+                <div class="w-1/3 h-full hidden lg:block px-4 py-2">
+                    <div class="flex flex-nowrap p-4 pb-0">
+                        <div class="flex items-center w-[10%]">
+                            <div class="w-12 h-12 bg-secondary">
+                                <button class="h-full w-full hover:cursor-pointer" (click)="decrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                                    <img src="./assets/icon/freccia-indietro-100.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                        <div class="flex justify-center w-[90%]">
+                            <div class="bg-secondary w-[70%] h-12 flex justify-center items-center ">
+                                <p class="text-lg font-bold text-white text-center">{{MONTH_NAMES[currentMonthLeft]}} {{currentYearLeft}}</p>
                             </div>
                         </div>
                     </div>
-                    <div class="lg:w-1/3 h-full w-full">
-                        <div class="container mx-auto px-4 py-2 h-full">
-                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
-                                <div class="flex items-center justify-between py-2 px-6">
-                                    <div>
-                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthCentral]}}</span>
-                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearCentral}}</span>
-                                    </div>
-                                </div>
-                                <div class="p-4">
-                                    <div class="flex flex-wrap w-full">
-                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
-                                            <div class="px-2 py-2">
-                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="w-full flex flex-wrap border-t border-l">
-                                        <div *ngFor="let blankday of blankdays_central, let last=last" class="border-b w-[14.28%]" id="blankday">
-                                            <div *ngIf="blankdays_central.length!=blankday" class="text-center h-full px-4 pt-2"></div>
-                                            <div *ngIf="blankdays_central.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
-                                        </div>
-                                        <div *ngFor="let date of no_of_days_central" class="border-r border-b w-[14.28%]" id="no_of_days">
-                                            <div class="py-2 hover:cursor-pointer " [ngClass]="{
-                                                    'bg-black text-white': controlForIsToday(currentYearCentral, currentMonthCentral, date) }">
-                                                <div (click)="daySelected=date; isToday(currentYearCentral, currentMonthCentral, daySelected)" class="flex items-center justify-center text-center">
-                                                    <p class="w-full text-center">{{date}}</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                    <div class="p-4">
+                        <div class="flex flex-wrap w-full">
+                            <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                <div class="px-2 py-2">
+                                    <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="w-1/3 h-full hidden lg:block">
-                        <div class="container mx-auto px-4 py-2 h-full">
-                            <div class="bg-white rounded-lg shadow overflow-hidden h-full">
-                                <div class="flex items-center justify-between py-2 px-6">
-                                    <div>
-                                        <span class="text-lg font-bold text-gray-800">{{MONTH_NAMES[currentMonthRigth]}}</span>
-                                        <span class="ml-1 text-lg text-gray-600 font-normal">{{currentYearRigth}}</span>
-                                    </div>
-                                </div>
-                                <div class="p-4">
-                                    <div class="flex flex-wrap w-full">
-                                        <div *ngFor="let day of DAYS" class="w-[14.28%]">
-                                            <div class="px-2 py-2">
-                                                <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="w-full flex flex-wrap border-t border-l">
-                                        <div *ngFor="let blankday of blankdays_rigth, let last=last" class="border-b w-[14.28%]" id="blankday">
-                                            <div *ngIf="blankdays_rigth.length!=blankday" class="text-center h-full px-4 pt-2"></div>
-                                            <div *ngIf="blankdays_rigth.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
-                                        </div>
-                                        <div *ngFor="let date of no_of_days_rigth" class="border-r border-b w-[14.28%]" id="no_of_days">
-                                            <div class="py-2 hover:cursor-pointer" [ngClass]="{
-                                                    'bg-black text-white': controlForIsToday(currentYearRigth, currentMonthRigth, date) }">
-                                                <div (click)="daySelected=date; isToday(currentYearRigth, currentMonthRigth, daySelected)" class="flex items-center justify-center cursor-pointer text-center">
-                                                    <p class="w-full text-center">{{date}}</p>
-                                                </div>
-                                            </div>
-                                        </div>
+                        <div class="w-full flex flex-wrap border-t border-l">
+                            <div *ngFor="let blankday of blankdays_left, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                <div *ngIf="blankdays_left.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                <div *ngIf="blankdays_left.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                            </div>
+                            <div *ngFor="let date of no_of_days_left" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                <div class="py-2 hover:cursor-pointer" [ngClass]="{
+                                                        'bg-black text-white': controlForIsToday(currentYearLeft, currentMonthLeft, date) }">
+                                    <div (click)="daySelected=date; isToday(currentYearLeft, currentMonthLeft, daySelected)" class="flex items-center justify-center cursor-pointer text-center">
+                                        <p class="w-full text-center">{{date}}</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="w-[10%]">
-                <div class="border rounded-lg px-1" style="padding-top: 2px;">
-                    <button class="leading-none rounded-lg transition ease-in-out duration-100 inline-flex items-center cursor-pointer hover:bg-gray-200 p-1" :class="{'cursor-not-allowed opacity-25': month == 11 }" (click)="incrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
-                        +
-                    </button>
+                <div class="lg:w-1/3 w-full h-full lg:block px-4 py-2">
+                    <div class="flex flex-nowrap justify-between lg:justify-center p-4 pb-0">
+                        <div class="flex items-center w-[10%] lg:hidden">
+                            <div class="w-8 h-12 bg-secondary">
+                                <button class="h-full w-full hover:cursor-pointer" (click)="decrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                                    <img src="./assets/icon/freccia-indietro-100.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                        <div class="flex justify-center w-[80%] lg:w-[90%]">
+                            <div class="bg-secondary w-[80%] h-12 flex justify-center items-center ">
+                                <p class="text-lg font-bold text-white text-center">{{MONTH_NAMES[currentMonthCentral]}} {{currentYearCentral}}</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center w-[10%] lg:hidden lg:w-0">
+                            <div class="w-8 h-12 bg-secondary">
+                                <button class="h-full w-full hover:cursor-pointer" (click)="incrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                                    <img src="./assets/icon/freccia-avanti-100.png" alt="">
+
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <div class="flex flex-wrap w-full">
+                            <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                <div class="px-2 py-2">
+                                    <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-full flex flex-wrap border-t border-l">
+                            <div *ngFor="let blankday of blankdays_central, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                <div *ngIf="blankdays_central.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                <div *ngIf="blankdays_central.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                            </div>
+                            <div *ngFor="let date of no_of_days_central" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                <div class="py-2 hover:cursor-pointer " [ngClass]="{
+                                                        'bg-black text-white': controlForIsToday(currentYearCentral, currentMonthCentral, date) }">
+                                    <div (click)="daySelected=date; isToday(currentYearCentral, currentMonthCentral, daySelected)" class="flex items-center justify-center text-center">
+                                        <p class="w-full text-center">{{date}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 h-full hidden lg:block px-4 py-2">
+                    <div class="flex flex-nowrap p-4 pb-0">
+                        <div class="flex justify-center w-[90%] ">
+                            <div class="bg-secondary w-[70%] h-12 flex justify-center items-center ">
+                                <p class="text-lg font-bold text-white text-center">{{MONTH_NAMES[currentMonthRigth]}} {{currentYearRigth}}</p>
+                            </div>
+                        </div>
+                        <div class="flex items-center w-[10%]">
+                            <div class="w-12 h-12 bg-secondary">
+                                <button class="h-full w-full hover:cursor-pointer" (click)="incrementMonth(currentMonthLeft,currentMonthCentral, currentMonthRigth);">
+                                    <img src="./assets/icon/freccia-avanti-100.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <div class="flex flex-wrap w-full">
+                            <div *ngFor="let day of DAYS" class="w-[14.28%]">
+                                <div class="px-2 py-2">
+                                    <div class="w-[14.28%] text-gray-600 text-sm uppercase tracking-wide font-bold text-center">{{day}}</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-full flex flex-wrap border-t border-l">
+                            <div *ngFor="let blankday of blankdays_rigth, let last=last" class="border-b w-[14.28%]" id="blankday">
+                                <div *ngIf="blankdays_rigth.length!=blankday" class="text-center h-full px-4 pt-2"></div>
+                                <div *ngIf="blankdays_rigth.length===blankday" class="text-center h-full border-r px-4 pt-2"></div>
+                            </div>
+                            <div *ngFor="let date of no_of_days_rigth" class="border-r border-b w-[14.28%]" id="no_of_days">
+                                <div class="py-2 hover:cursor-pointer" [ngClass]="{
+                                                        'bg-black text-white': controlForIsToday(currentYearRigth, currentMonthRigth, date) }">
+                                    <div (click)="daySelected=date; isToday(currentYearRigth, currentMonthRigth, daySelected)" class="flex items-center justify-center cursor-pointer text-center">
+                                        <p class="w-full text-center">{{date}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
