--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -30,7 +30,7 @@
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full">{{team.name}}</p>
+                                            <p class="w-full">{{team.teamName}}</p>
                                             <p class="w-full">❤</p>
                                         </div>
                                     </li>
@@ -50,7 +50,7 @@
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full">{{team.name}}</p>
+                                            <p class="w-full">{{team.teamName}}</p>
                                             <p class="w-full">❤</p>
                                         </div>
                                     </li>
@@ -70,7 +70,7 @@
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                            <p class="w-full">{{team.name}}</p>
+                                            <p class="w-full">{{team.teamName}}</p>
                                             <p class="w-full">❤</p>
                                         </div>
                                     </li>
@@ -88,60 +88,60 @@
                     <h2 class="font-bold text-2xl text-white pl-4">WESTERN CONFERENCE</h2>
                 </div>
                 <div class="w-full flex justify-between mt-8 h-full">
-                    <div class="w-1/3 flex flex-wrap justify-start" >
+                    <div class="w-1/3 flex flex-wrap justify-start">
                         <div class="w-[80%]">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>SOUTHWEST</p>
                             </div>
-                            <div class="flex justify-center" >
+                            <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.SouthWest">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                                <p class="w-full">{{team.name}}</p>
-                                                <p class="w-full">❤</p>
+                                            <p class="w-full">{{team.teamName}}</p>
+                                            <p class="w-full">❤</p>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-center" >
+                    <div class="w-1/3 flex flex-wrap justify-center">
                         <div class="w-[80%]">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>NORTHWEST</p>
                             </div>
-                            <div class="flex justify-center" >
+                            <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.NorthWest">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                                <p class="w-full">{{team.name}}</p>
-                                                <p class="w-full">❤</p>
+                                            <p class="w-full">{{team.teamName}}</p>
+                                            <p class="w-full">❤</p>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="w-1/3 flex flex-wrap justify-end" >
+                    <div class="w-1/3 flex flex-wrap justify-end">
                         <div class="w-[80%]">
                             <div class="w-full flex justify-center items-center bg-primary font-bold text-1xl text-white h-12">
                                 <p>PACIFIC</p>
                             </div>
-                            <div class="flex justify-center" >
+                            <div class="flex justify-center">
                                 <ul class="w-[90%] flex-col">
                                     <li class="h-16 flex justify-center my-4" *ngFor="let team of teams.Pacific">
                                         <div class="w-1/3 flex justify-center">
                                             <img class="object-contain h-full" src={{team.logo}} alt="" />
                                         </div>
                                         <div class="w-2/3 pl-4">
-                                                <p class="w-full">{{team.name}}</p>
-                                                <p class="w-full">❤</p>
+                                            <p class="w-full">{{team.teamName}}</p>
+                                            <p class="w-full">❤</p>
                                         </div>
                                     </li>
                                 </ul>
