continuo pagina glossario

--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="w-full bg-primary text-white h-[50vh] flex flex-nowrap">
+    <div class="w-full bg-primary text-white altezza-footer flex flex-nowrap">
         <div class="w-[25%] flex justify-center items-center">
             <img [routerLink]="['/home']" class="object-fill h-[50%] w-auto" src="assets/logo-slam-stats.png" alt="logo" />
         </div>
