finito ma con bug cuore rosso

--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -22,9 +22,9 @@
             RESET FILTRI
         </button>
         <div class="toggle-wrapper rounded-full lg:px-6 px-3 lg:py-1 text-sm hover:underline">
-            <div class="heart-rollover">
-                <input id="cuore" type="checkbox" />
-                <label class="toggle-item" for="cuore">
+            <div class="heart-rollover" (click)="favouriteStanding=!favouriteStanding; toggleChecked(); functionChangeStandingWithFavourite(favouriteStanding, $event)">
+                <input id="cuore" type="checkbox"  />
+                <label class="toggle-item" for="cuore" id="cuoreLabel">
                     <div class="heart">
                     </div>
                 </label>
