--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -147,15 +147,38 @@ label.toggle-item {
     }
 }
 
-#cuore:checked {
+#cuore:checked{
     +label {
         .heart {
             &:after {
-                animation: colorChangeAfter .3s steps(1) 0.3s forwards;
+                animation: colorChangeAfter .3s steps(1) 0s forwards alternate;
             }
 
             &:before {
-                animation: colorChangeBefore .3s steps(1) 0.3s forwards;
+                animation: colorChangeBefore .3s steps(1) 0s forwards alternate;
+            }
+        }
+    }
+}
+
+#heart:not(.heart-selected) + label .heart:after {
+    /* Stili per il cuore non selezionato quando non cliccato */
+    animation: none; /* Disabilita l'animazione quando non cliccato */
+}
+#heart:not(.heart-selected)+ label .heart:before {
+    /* Stili per il cuore non selezionato quando non cliccato */
+    animation: none; /* Disabilita l'animazione quando non cliccato */
+}
+
+#cuore:not(:checked){
+    +label {
+        .heart {
+            &:after {
+                animation: colorChangeAfterReturn .3s steps(1) 0s forwards alternate;
+            }
+
+            &:before {
+                animation: colorChangeBeforeReturn .3s steps(1) 0s forwards alternate;
             }
         }
     }
@@ -164,69 +187,31 @@ label.toggle-item {
 @keyframes colorChangeAfter {
     0% {
         background-color: black;
-        transform: translateX(.5rem);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-        -webkit-transform-origin: 100% 100%;
-        -moz-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-        -o-transform-origin: 100% 100%;
+        transform: translateX(1rem) rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     25% {
         background-color: rgb(71, 51, 51);
-        transform: translateX(1.5rem) rotate(45deg);
+        transform: translateX(2rem) rotate(45deg);
         transform-origin: 100% 100%;
-        @include prefix('transform', translateX(1.5rem) rotate(45deg));
-    @include prefix('transform-origin', 100% 100%);
     }
 
     50% {
         background-color: rgb(133, 66, 66);
-        transform: translateX(2.5rem);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-        -webkit-transform-origin: 100% 100%;
-        -moz-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-        -o-transform-origin: 100% 100%;
+        transform: translateX(3rem) rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     75% {
         background-color: rgb(180, 40, 40);
-        transform: translateX(3.5rem);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-        -webkit-transform-origin: 100% 100%;
-        -moz-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-        -o-transform-origin: 100% 100%;
+        transform: translateX(4rem) rotate(45deg);
         transform-origin: 100% 100%;
     }
 
     100% {
         background-color: red;
-        transform: translateX(4.5rem);
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
-        -webkit-transform-origin: 100% 100%;
-        -moz-transform-origin: 100% 100%;
-        -ms-transform-origin: 100% 100%;
-        -o-transform-origin: 100% 100%;
+        transform: translateX(5rem) rotate(45deg);
         transform-origin: 100% 100%;
     }
 }
@@ -234,76 +219,95 @@ label.toggle-item {
 @keyframes colorChangeBefore {
     0% {
         background-color: black;
-        transform: translateX(.5rem);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-transform-origin: 0 100%;
-        -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
+        transform: translateX(1rem) rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     25% {
         background-color: rgb(71, 51, 51);
-        transform: translateX(1.5rem);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-transform-origin: 0 100%;
-        -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
+        transform: translateX(2rem) rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     50% {
         background-color: rgb(133, 66, 66);
-        transform: translateX(2.5rem);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-transform-origin: 0 100%;
-        -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
+        transform: translateX(3rem) rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     75% {
         background-color: rgb(180, 40, 40);
-        transform: translateX(3.5rem);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-transform-origin: 0 100%;
-        -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
+        transform: translateX(4rem) rotate(-45deg);
         transform-origin: 0 100%;
     }
 
     100% {
         background-color: red;
-        transform: translateX(4.5rem);
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-        -webkit-transform-origin: 0 100%;
-        -moz-transform-origin: 0 100%;
-        -ms-transform-origin: 0 100%;
-        -o-transform-origin: 0 100%;
+        transform: translateX(5rem) rotate(-45deg);
+        transform-origin: 0 100%;
+    }
+}
+
+@keyframes colorChangeAfterReturn {
+    0% {
+        background-color: red;
+        transform: translateX(4rem) rotate(45deg);
+        transform-origin: 100% 100%;
+    }
+
+    25% {
+        background-color: rgb(180, 40, 40);
+        transform: translateX(3rem) rotate(45deg);
+        transform-origin: 100% 100%;
+    }
+
+    50% {
+        background-color: rgb(133, 66, 66);
+        transform: translateX(2rem) rotate(45deg);
+        transform-origin: 100% 100%;
+    }
+
+    75% {
+        background-color: rgb(71, 51, 51);
+        transform: translateX(1rem) rotate(45deg);
+        transform-origin: 100% 100%;
+    }
+
+    100% {
+        background-color: black;
+        transform: translateX(0rem) rotate(45deg);
+        transform-origin: 100% 100%;
+    }
+}
+
+@keyframes colorChangeBeforeReturn {
+    0% {
+        background-color: red;
+        transform: translateX(4rem) rotate(-45deg);
+        transform-origin: 0 100%;
+    }
+
+    25% {
+        background-color: rgb(180, 40, 40);
+        transform: translateX(3rem) rotate(-45deg);
+        transform-origin: 0 100%;
+    }
+
+    50% {
+        background-color: rgb(133, 66, 66);
+        transform: translateX(2rem) rotate(-45deg);
+        transform-origin: 0 100%;
+    }
+
+    75% {
+        background-color: rgb(71, 51, 51);
+        transform: translateX(1rem) rotate(-45deg);
+        transform-origin: 0 100%;
+    }
+
+    100% {
+        background-color: black;
+        transform: translateX(0rem) rotate(-45deg);
         transform-origin: 0 100%;
     }
 }
